# generic-rhythm-game

./: .gitmodules  CMakeLists.txt  README.md  TODO
assets/: logo.frag
assets/shaders/: ads.frag  ads.vert  adsfog.frag  adsfog.vert  adsfogblend.frag  adsfogclip.frag  adsfogclip.vert  billboard.frag  billboard.geom  billboard.vert  debug.frag  debug.vert  decal.vert  decalfog.frag  decalfog.vert  logo.vert  text.frag
assets/textures/: gen-debris-textures.sh
assets/tracks/: galaxies.json  track.json
assetsrc/: beat.blend  button.xcf  track.xcf
game/: CMakeLists.txt  bezier.h  camera.cpp  camera.h  frustum.cpp  frustum.h  geometryutils.cpp  geometryutils.h  hudpainter.cpp  hudpainter.h  inputstate.h  loadmesh.cpp  loadmesh.h  loadprogram.cpp  logo.cpp  logo.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  meshutils.cpp  meshutils.h  oggplayer.cpp  oggplayer.h  particlesystem.cpp  particlesystem.h  renderer.cpp  renderer.h  shadermanager.cpp  shadermanager.h  track.cpp  track.h  tween.h  world.cpp  world.h
gx/: CMakeLists.txt
gx/gx/: CMakeLists.txt  glwindow.cpp  lazytexture.cpp  pixmap.cpp  spritebatcher.cpp  textureatlas.cpp
gx/include/gx/: fontcache.h  glwindow.h  mesh.h  shaderprogram.h  spritebatcher.h
gx/src/: fontcache.cpp  glwindow.cpp  ioutil.cpp  pixmap.cpp  shaderprogram.cpp  spritebatcher.cpp  texture.cpp  textureatlaspage.cpp
gx/tests/: CMakeLists.txt
gx/tests/fontcache/: CMakeLists.txt  tst_fontcache.cpp
gx/tests/manual/fontcache/: tst_fontcache.cpp
gx/tests/manual/textrendering/: tst_textrendering.cpp
gx/tests/textrendering/: CMakeLists.txt  tst_textrendering.cpp
tools/editor/: CMakeLists.txt  README.md  editor.qrc  editorwindow.cpp  editorwindow.h  main.cpp  track.cpp  track.h  trackinfowidget.cpp  trackinfowidget.h  trackview.cpp  trackview.h  waveformrenderer.cpp  waveformrenderer.h
